Created a function to remove user cookies, added a toast message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/pokemonLogo.jpg" alt="The official Pokemon logo in yellow, bold text with a blue outline on each letter.">
+        <img id="pokemonLogo" src="/images/pokemonLogo.jpg" alt="The official Pokemon logo in yellow, bold text with a blue outline on each letter.">
         <div id="menuSpacer"></div>
         <a href="/pages/selection.html">Checkout</a>
     </header>
@@ -28,6 +28,9 @@
             <h1>Umbreon</h1>
         </article>
     </main>
+    <article id="toastMessage">
+        <p>Sample toast message.</p>
+    </article>
     <footer>
         <p>Gotta Catch 'Em All</p>
     </footer>
