--- a/pages/selection.html
+++ b/pages/selection.html
@@ -14,6 +14,9 @@
     <main id="selectionContainer">
         
     </main>
+    <article>
+        <a href="/index.html" id="newOption" onclick="removeCookies()">Select New Option</a>
+    </article>
     <footer>
         <p>Gotta Catch 'Em All</p>
     </footer>
